Fix npm package name and response bug.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aws-lambda-ag",
+  "name": "node-aws-lambda-ag",
   "version": "0.0.1",
   "description": "Tiny AWS Node helper for API Gateway Lambda proxies",
   "main": "index.js",
